# web

./: Cargo.toml  README.md  schema.sql
public/: styles.css
src/: auth.rs  errors.rs  main.rs  users.rs  utils.rs
templates/: admin.html  base.html  index.html  login.html  signup.html  user.html
