[package]
name = "hecksmosis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
axum-login = "0.9.0"
axum-macros = "0.3.8"
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"
pbkdf2 = { version = "0.12.2", features = ["std", "password-hash", "simple"] }
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-native-tls"] }
sync_wrapper = "0.1.2"
tera = "1.19.1"
tokio = "1.28.2"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
